# verbal-direction

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
verbal_direction/: __init__.py  __main__.py  config.py
verbal_direction/core/: event_bus.py  output_monitor.py  process_discovery.py  response_dispatcher.py  session_manager.py  session_state.py  terminal_router.py  transcript_monitor.py
verbal_direction/intelligence/: attention_filter.py  response_classifier.py
verbal_direction/ui/: dashboard.py  desktop.py
verbal_direction/voice/: audio_device.py  recorder.py  stt.py  tts.py  vad.py  voice_router.py
